# simple-style-plugin

./: CMakeLists.txt  README.md  simplestyle.json
src/: SimpleStyle.cpp  SimpleStyle.h  SimpleStylePlugin.cpp  SimpleStylePlugin.h
